--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
       </nav>
     <h1>Hola Mundo</h1>
+    <h2>hola</h2>
     <div class="card col-sm-6 col-md-4" >
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
